fix: Prevent navbar from overlapping with modal

--- a/web/index.css
+++ b/web/index.css
@@ -17,3 +17,9 @@
 .pf-x-c-tooltip.pf-m-right {
   left: calc(100% + (var(--pf-c-tooltip__arrow--Width) / 2));
 }
+
+.pf-x-c-backdrop--nested {
+  padding-top: var(
+    --pf-c-page__header--MinHeight
+  ); /* TODO: This does depend on the navbar being no higher than the min value; in the future, object queries might be used. */
+}
